Quitar la pausa (on hover) del carrousel

--- a/views/es/index.html
+++ b/views/es/index.html
@@ -70,7 +70,7 @@
     </section>
     <!--------------------------- Carrousel Principa-------------------------------------->
     <section>
-        <div id="demo" class="carousel slide" data-ride="carousel" data-interval="5000">
+        <div id="demo" class="carousel slide" data-ride="carousel" data-interval="5000" data-pause="false">
 
             <!-- Indicators -->
             <ul class="carousel-indicators">
